BB-417: changed function names
